--- a/sp3.html
+++ b/sp3.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>san pham 1</title>
+    <title>San pham 3</title>
     <meta charset="UTF-8"/>
 	<link rel="stylesheet" type="text/css" href="style1.css">
 </head>
@@ -8,8 +8,8 @@
 <body>
 
 
-<a href="home.html#1"><img src="1.jpg" alt="san pham 1" title ="san pham 1" /><br/>
-San pham 1<br/></a>
+<a href="home.html#3"><img src="3.jpg" alt="san pham 3" title ="san pham 3" /><br/>
+San pham 3<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
 <p>Some inexpensive (and not-so-inexpensive) tube amps don’t use tubes to their full potential, “starving” them with low plate voltages or using op-amp buffers for output. Not Vali 2. Vali 2 uses a unique, class-leading power supply that gives us 60V on the plate. Combined with a fully discrete, current-mode noninverting hybrid topology, Vali 2 redefines what you can expect from an affordable tube amp, even at 2x its price.</p>
@@ -25,6 +25,8 @@ San pham 1<br/></a>
 <h3>Made in USA. Really.</h3>
 
 <p>By “made in USA,” we mean made in USA. The vast majority of the total production cost of Vali 2—chassis, boards, assembly, etc—goes to US companies manufacturing in the US. Our board house is 20 minutes away from our office in Newhall. Our chassis guys are just over the hill in the Valley. Yep, the wall wart is from China, but there you go. There is some give and take to reach this price point.</p>
+
+
 
 
 </body>
