doi home.html => index.html

--- a/sp12.html
+++ b/sp12.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#12"><img src="12.jpg" alt="san pham 12" title ="san pham 12" /><br/>
+<a href="index.html#12"><img src="12.jpg" alt="san pham 12" title ="san pham 12" /><br/>
 San pham 12<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
