--- a/sp2.html
+++ b/sp2.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#2"><img src="2.jpg" alt="san pham 2" title ="san pham 2" /><br/>
+<a href="index.html#2"><img src="2.jpg" alt="san pham 2" title ="san pham 2" /><br/>
 San pham 2<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
