--- a/sp3.html
+++ b/sp3.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#3"><img src="3.jpg" alt="san pham 3" title ="san pham 3" /><br/>
+<a href="index.html#3"><img src="3.jpg" alt="san pham 3" title ="san pham 3" /><br/>
 San pham 3<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
