--- a/sp6.html
+++ b/sp6.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#6"><img src="6.jpg" alt="san pham 6" title ="san pham 6" /><br/>
+<a href="index.html#6"><img src="6.jpg" alt="san pham 6" title ="san pham 6" /><br/>
 San pham 6<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
