--- a/sp7.html
+++ b/sp7.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#7"><img src="7.jpg" alt="san pham 7" title ="san pham 7" /><br/>
+<a href="index.html#7"><img src="7.jpg" alt="san pham 7" title ="san pham 7" /><br/>
 San pham 7<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
