--- a/sp8.html
+++ b/sp8.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#8"><img src="8.jpg" alt="san pham 8" title ="san pham 8" /><br/>
+<a href="index.html#8"><img src="8.jpg" alt="san pham 8" title ="san pham 8" /><br/>
 San pham 8<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
