--- a/sp1.html
+++ b/sp1.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#1"><img src="1.jpg" alt="san pham 1" title ="san pham 1" /><br/>
+<a href="index.html#1"><img src="1.jpg" alt="san pham 1" title ="san pham 1" /><br/>
 San pham 1<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
