--- a/sp10.html
+++ b/sp10.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#10"><img src="10.jpg" alt="san pham 10" title ="san pham 10" /><br/>
+<a href="index.html#10"><img src="10.jpg" alt="san pham 10" title ="san pham 10" /><br/>
 San pham 10<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
