--- a/sp11.html
+++ b/sp11.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#11"><img src="11.jpg" alt="san pham 11" title ="san pham 11" /><br/>
+<a href="index.html#11"><img src="11.jpg" alt="san pham 11" title ="san pham 11" /><br/>
 San pham 11<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
