--- a/sp5.html
+++ b/sp5.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#5"><img src="5.jpg" alt="san pham 5" title ="san pham 5" /><br/>
+<a href="index.html#5"><img src="5.jpg" alt="san pham 5" title ="san pham 5" /><br/>
 San pham 5<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
