--- a/sp9.html
+++ b/sp9.html
@@ -8,7 +8,7 @@
 <body>
 
 
-<a href="home.html#9"><img src="9.jpg" alt="san pham 9" title ="san pham 9" /><br/>
+<a href="index.html#9"><img src="9.jpg" alt="san pham 9" title ="san pham 9" /><br/>
 San pham 9<br/></a>
 <h3>The Most Serious Tube Design—Far Beyond its Price</h3>
 
