--- a/Javascript/index.html
+++ b/Javascript/index.html
@@ -9,6 +9,7 @@
 	
 	
 	//Bai1
+	// VD de tinh binh phuong cua 2, nhap lenh binhPhuong(2)
 	function binhPhuong(a)
 		{
 		alert (a*a)
@@ -16,6 +17,7 @@
 	
 	
 	//Bai2
+	// VD de tinh  binh phuong cua (3a+2b+c), voi a,b,c lan luot la 1,3,4 nhap lenh binhPhuong1(1,3,4)
 	function binhPhuong1(a,b,c)
 		{
 		alert(binhPhuong(3*a+2*b+c))
@@ -24,12 +26,14 @@
 	
 	
 	//Bai 3
+	//VD de lay ra 10 chu cai dau tien chuoi "con meo ma treo cay cau hoi tham chu chuot" nhap lenh: catChuoi ("Con meo ma treo cay cau hoi tham chu chuot")
 	function catChuoi (a)
 		{
 			alert(a.substring(0,10)+"...")
 		}
 	
 	//Bai 4
+	//VD de bien chuoi "no pain no gain" thanh viet hoa chu dau tien nhap: vietHoa("no pain no gain")
 	function vietHoa(a)
 		{
 			b=a[0].toUpperCase();
@@ -39,6 +43,7 @@
 	var a= [];
 	
 	//Bai 5
+	//VD de tim so nho nhat trong day so 2,4,9, nhap soNhoNhat([2,4,9])
 	function soNhoNhat(a)
 		{
 			a.sort(function(b,c){return b-c});
@@ -47,6 +52,7 @@
 	
 	
 	//Bai 6
+	//VD de sap xep ten hoc vien Thai, Quan, Tung, Kien, Nam theo bang chu cai nhap tenHocVien(["Thai","Quan","Tung","Kien","Nam"])
 	function tenHocVien(a)
 		{
 			
@@ -55,6 +61,7 @@
 		
 			
 	//Bai 7
+	//VD de biet thong tin ve giao vien, nhap: teacher.say()
 	var teacher = {
 		firstname: "Hood",
 		lastname: "Robin",
