calculator co theme

--- a/Dom/Calculator/index.html
+++ b/Dom/Calculator/index.html
@@ -59,7 +59,7 @@
 </div>
 
 </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script>
 
 // function reset ô nhập liệu
