--- a/Tekstorm/index.html
+++ b/Tekstorm/index.html
@@ -101,7 +101,7 @@
                                                     </li>
                                                     <li>
                                                             <a href='http://google.com.vn'>
-                                                                <img src='images/logo/msi.gif'>MSI
+                                                                <img src='images/logo/MSI.gif'>MSI
                                                             </a>
                                                     </li>
                                                     <li>
@@ -191,7 +191,7 @@
                                                 </li>
                                                 <li>
                                                         <a href='http://google.com.vn'>
-                                                            <img src='images/logo/AmD.gif'>AMD
+                                                            <img src='images/logo/amd.gif'>AMD
                                                         </a>
                                                 </li>
                                                 <div class='menu-product-show'>
