--- a/Tekstorm/index.html
+++ b/Tekstorm/index.html
@@ -71,7 +71,7 @@
                                                 </li>
                                                 <li>
                                                         <a href='http://google.com.vn'>
-                                                            <img src='images/logo/AmD.gif'>AMD
+                                                            <img src='images/logo/amd.gif'>AMD
                                                         </a>
                                                 </li>
                                                 <div class='menu-product-show'>
@@ -136,7 +136,7 @@
                                                     </li>
                                                     <li>
                                                             <a href='http://google.com.vn'>
-                                                                <img src='images/logo/msi.gif'>MSI
+                                                                <img src='images/logo/MSI.gif'>MSI
                                                             </a>
                                                     </li>
                                                     <li>
@@ -221,7 +221,7 @@
                                                 </li>
                                                 <li>
                                                         <a href='http://google.com.vn'>
-                                                            <img src='images/logo/AmD.gif'>AMD
+                                                            <img src='images/logo/amd.gif'>AMD
                                                         </a>
                                                 </li>
                                                 <div class='menu-product-show'>
@@ -251,7 +251,7 @@
                                                 </li>
                                                 <li>
                                                         <a href='http://google.com.vn'>
-                                                            <img src='images/logo/AmD.gif'>AMD
+                                                            <img src='images/logo/amd.gif'>AMD
                                                         </a>
                                                 </li>
                                                 <div class='menu-product-show'>
@@ -281,7 +281,7 @@
                                                 </li>
                                                 <li>
                                                         <a href='http://google.com.vn'>
-                                                            <img src='images/logo/msi.gif'>MSI
+                                                            <img src='images/logo/MSI.gif'>MSI
                                                         </a>
                                                 </li>
                                                 <li>
@@ -335,7 +335,7 @@
                                                 </li>
                                                 <li>
                                                         <a href='http://google.com.vn'>
-                                                            <img src='images/logo/AmD.gif'>AMD
+                                                            <img src='images/logo/amd.gif'>AMD
                                                         </a>
                                                 </li>
                                                 <div class='menu-product-show'>
@@ -365,7 +365,7 @@
                                                 </li>
                                                 <li>
                                                         <a href='http://google.com.vn'>
-                                                            <img src='images/logo/AmD.gif'>AMD
+                                                            <img src='images/logo/amd.gif'>AMD
                                                         </a>
                                                 </li>
                                                 <div class='menu-product-show'>
