--- a/Tekstorm 12-11/asus_maximus.html
+++ b/Tekstorm 12-11/asus_maximus.html
@@ -543,12 +543,16 @@
                 <div class = 'info info-galery light-section' id='section1' color ='white'>
                     <h2>HÌNH ẢNH</h2>
                     <div class='thumbnail'>
-                        <img class='thumb' src='images/product/msi_x370_ack/1.png' style='border:2px solid lightgray'>
+                        <div class='thumb-move'></div>
+                        <img class='thumb' src='images/product/msi_x370_ack/1.png'>
                         <img class='thumb' src='images/product/msi_x370_ack/2.png'>
                         <img class='thumb' src='images/product/msi_x370_ack/3.png'>
+                        
                     </div>
-                    <img class='front big-image' src='images/product/msi_x370_ack/1.png'>
-                    <img class='front big-image' src='images/product/msi_x370_ack/1.png'>
+                    <div class='galery-image'>
+                        <img class='front big-image' src='images/product/msi_x370_ack/1.png'>
+                        <img class='back big-image' src='images/product/msi_x370_ack/1.png'>
+                    </div>    
                     
 
                 </div>
