--- a/Tekstorm 12-11/index.html
+++ b/Tekstorm 12-11/index.html
@@ -421,7 +421,7 @@
                                                 </li>
                                                 <li>
                                                         <a href='http://google.com.vn'>
-                                                            <img src='images/logo/AmD.gif'>AMD
+                                                            <img src='images/logo/amd.gif'>AMD
                                                         </a>
                                                 </li>
                                                 <div class='menu-product-show'>
