--- a/Tekstorm 12-11/index.html
+++ b/Tekstorm 12-11/index.html
@@ -213,7 +213,7 @@
                                                     </li>
                                                     <li>
                                                             <a href='http://google.com.vn'>
-                                                                <img src='images/logo/msi.gif'>MSI
+                                                                <img src='images/logo/MSI.gif'>MSI
                                                             </a>
                                                     </li>
                                                     <li>
